force-app/main/default/objects/Waiver_Settings__c/Waiver_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings to support waiver and letter creation</description>
    <label>Waiver Settings</label>
</CustomObject>