force-app/main/default/objects/Waiver_Settings__c/fields/Conditional_Final_Name__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Final_Name__c</fullName>
    <description>Name used for Apex code to match against field value.</description>
    <label>Conditional_Final_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>