force-app/main/default/objects/Waiver_Settings__c/fields/Letter_10_Day_Name__c.field-meta.xml
<CustomField>
    <fullName>Letter_10_Day_Name__c</fullName>
    <description>Name to be used in Apex code to compare against field values</description>
    <label>Letter_10_Day_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>