force-app/main/default/objects/Waiver_Settings__c/fields/Letter_60_Day_Name__c.field-meta.xml
<CustomField>
    <fullName>Letter_60_Day_Name__c</fullName>
    <description>Name used for Apex code to match against field value.</description>
    <label>Letter_60_Day_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>