force-app/main/default/objects/Waiver_Settings__c/fields/Unconditional_Final_Name__c.field-meta.xml
<CustomField>
    <fullName>Unconditional_Final_Name__c</fullName>
    <description>Name used in Apex code to match against field value</description>
    <label>Unconditional_Final_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>